@@ -13,6 +13,7 @@
   for security checks.
 - $SYS messages are now only republished when their value changes.
 - Windows native broker now responds to command line arguments.
+- Simplify client disconnecting so wills gets sent in all cases (bug #792468).
 
 0.10.2 - 20110106
 =================
